Fixed adding same classes to Schedule